Popup bug fixed

--- a/Enterprise-asset-management-software.html
+++ b/Enterprise-asset-management-software.html
@@ -636,7 +636,7 @@ Icon for services and Projects -->
     </div>
     <!-- Modal 1 -->
 <div class="modal fade  model-popup project-modal" id="Modal1" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog wide-modal-dialog-feature">
+    <div class="modal-dialog project-modal-dialog   ">
       <div class="modal-content project-modal-content">
         <div class="modal-header project-modal-header">
           <h5 class="modal-title" id="mobileModalLabel">Work Order Management</h5>
@@ -663,7 +663,7 @@ Icon for services and Projects -->
   
   <!-- Modal 2 -->
   <div class="modal fade model-popup project-modal" id="Modal2" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog wide-modal-dialog-feature">
+    <div class="modal-dialog project-modal-dialog   ">
       <div class="modal-content project-modal-content">
         <div class="modal-header project-modal-header">
           <h5 class="modal-title" id="mobileModalLabel">Preventive Maintenance Automation</h5>
@@ -689,7 +689,7 @@ Icon for services and Projects -->
   
   <!-- Modal 3 -->
   <div class="modal fade model-popup project-modal" id="Modal3" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog wide-modal-dialog-feature">
+    <div class="modal-dialog project-modal-dialog   ">
         <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">Powerful & Customizable Dashboard</h5>
@@ -716,7 +716,7 @@ Icon for services and Projects -->
   
   <!-- Modal 4 -->
   <div class="modal fade model-popup project-modal" id="Modal4" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog wide-modal-dialog-feature">
+    <div class="modal-dialog project-modal-dialog   ">
         <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">Inventory & Spare Parts Management</h5>
@@ -744,7 +744,7 @@ Icon for services and Projects -->
   
   <!-- Modal 5 -->
   <div class="modal fade model-popup project-modal" id="Modal5" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog wide-modal-dialog-feature">
+    <div class="modal-dialog project-modal-dialog   ">
         <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">Advanced Asset Tracking with BLE/RFID/QR Code</h5>
@@ -770,7 +770,7 @@ Icon for services and Projects -->
   
   <!-- Modal 6 -->
   <div class="modal fade model-popup project-modal" id="Modal6" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog wide-modal-dialog-feature">
+    <div class="modal-dialog project-modal-dialog   ">
         <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">Mobile Access</h5>
@@ -796,7 +796,7 @@ Icon for services and Projects -->
   
   <!-- Modal 7 -->
   <div class="modal fade model-popup project-modal" id="Modal7" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog wide-modal-dialog-feature">
+    <div class="modal-dialog project-modal-dialog   ">
         <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">Asset Performance Management</h5>
@@ -822,7 +822,7 @@ Icon for services and Projects -->
   
   <!-- Modal 8 -->
   <div class="modal fade model-popup project-modal" id="Modal8" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog wide-modal-dialog-feature">
+    <div class="modal-dialog project-modal-dialog   ">
         <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">Asset Lifecycle Management</h5>
@@ -848,7 +848,7 @@ Icon for services and Projects -->
   
   <!-- Modal 9 -->
   <div class="modal fade model-popup project-modal" id="Modal9" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog wide-modal-dialog-feature">
+    <div class="modal-dialog project-modal-dialog   ">
         <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">OEE Monitoring</h5>
@@ -873,7 +873,7 @@ Icon for services and Projects -->
 
   <!-- Modal 10 -->
   <div class="modal fade model-popup project-modal" id="Modal10" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog wide-modal-dialog-feature">
+    <div class="modal-dialog project-modal-dialog   ">
         <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">Fixed Asset Auditing</h5>
@@ -898,7 +898,7 @@ Icon for services and Projects -->
 
   <!-- Modal 11 -->
   <div class="modal fade model-popup project-modal" id="Modal11" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog wide-modal-dialog-feature">
+    <div class="modal-dialog project-modal-dialog   ">
         <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">Seamless Integration with Other Systems</h5>
@@ -923,7 +923,7 @@ Icon for services and Projects -->
 
   <!-- Modal 12 -->
   <div class="modal fade model-popup project-modal" id="Modal12" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog wide-modal-dialog-feature">
+    <div class="modal-dialog project-modal-dialog   ">
         <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">IoT Energy Monitoring</h5>
@@ -949,7 +949,7 @@ Icon for services and Projects -->
 
   <!-- Modal 13 -->
   <div class="modal fade model-popup project-modal" id="Modal13" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog wide-modal-dialog-feature">
+    <div class="modal-dialog project-modal-dialog   ">
         <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">Interactive Asset Floor Plan</h5>
@@ -975,7 +975,7 @@ Icon for services and Projects -->
 
   <!-- Modal 14 -->
   <div class="modal fade model-popup project-modal" id="Modal14" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog wide-modal-dialog-feature">
+    <div class="modal-dialog project-modal-dialog   ">
         <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">Environment, Health & Safety (EHS)</h5>
@@ -1001,7 +1001,7 @@ Icon for services and Projects -->
 
   <!-- Modal 15 -->
   <div class="modal fade model-popup project-modal" id="Modal15" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog wide-modal-dialog-feature">
+    <div class="modal-dialog project-modal-dialog   ">
         <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">Dynamic Work Scheduling</h5>
@@ -1289,7 +1289,7 @@ Icon for services and Projects -->
     </div>
     <!-- Manufacturing Industry Modal -->
 <div class="modal fade project-modal" id="Serve1" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog" style="max-width: 35%;">
+    <div class="modal-dialog project-modal-dialog" >
         <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">Manufacturing Industry</h5>
@@ -1309,7 +1309,7 @@ Icon for services and Projects -->
 
 <!-- Energy & Utilities Modal -->
 <div class="modal fade project-modal" id="Serve2" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog" style="max-width: 35%;">
+    <div class="modal-dialog project-modal-dialog" >
         <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">Energy & Utilities</h5>
@@ -1329,7 +1329,7 @@ Icon for services and Projects -->
 
 <!-- Transportation & Logistics Modal -->
 <div class="modal fade project-modal" id="Serve3" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog" style="max-width: 35%;">
+    <div class="modal-dialog project-modal-dialog" >
         <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">Transportation & Logistics</h5>
@@ -1349,7 +1349,7 @@ Icon for services and Projects -->
 
 <!-- Construction & Engineering Modal -->
 <div class="modal fade project-modal" id="Serve4" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog" style="max-width: 35%;">
+    <div class="modal-dialog project-modal-dialog" >
         <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">Construction & Engineering</h5>
@@ -1369,7 +1369,7 @@ Icon for services and Projects -->
 
 <!-- Oil & Gas Modal -->
 <div class="modal fade project-modal" id="Serve5" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog" style="max-width: 35%;">
+    <div class="modal-dialog project-modal-dialog" >
         <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">Oil & Gas</h5>
@@ -1389,7 +1389,7 @@ Icon for services and Projects -->
 
 <!-- Healthcare Industry Modal -->
 <div class="modal fade project-modal" id="Serve6" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog" style="max-width: 35%;">
+    <div class="modal-dialog project-modal-dialog" >
         <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">Healthcare Industry</h5>
@@ -1409,7 +1409,7 @@ Icon for services and Projects -->
 
 <!-- Retail Industry Modal -->
 <div class="modal fade project-modal" id="Serve7" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog" style="max-width: 35%;">
+    <div class="modal-dialog project-modal-dialog" >
         <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">Retail Industry</h5>
@@ -1429,7 +1429,7 @@ Icon for services and Projects -->
 
 <!-- Facilities & Property Management Modal -->
 <div class="modal fade project-modal" id="Serve8" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog" style="max-width: 35%;">
+    <div class="modal-dialog project-modal-dialog" >
         <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">Facilities & Property Management</h5>
@@ -1449,7 +1449,7 @@ Icon for services and Projects -->
 
 <!-- Government & Public Sector Modal -->
 <div class="modal fade project-modal" id="Serve9" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog" style="max-width: 35%;">
+    <div class="modal-dialog project-modal-dialog" >
         <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">Government & Public Sector</h5>
@@ -1469,7 +1469,7 @@ Icon for services and Projects -->
 
 <!-- Chemicals, Petroleum, and Mining Modal -->
 <div class="modal fade project-modal" id="Serve10" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog" style="max-width: 35%;">
+    <div class="modal-dialog project-modal-dialog" >
         <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">Chemicals, Petroleum, and Mining</h5>
@@ -1489,7 +1489,7 @@ Icon for services and Projects -->
 
 <!-- Aerospace and Defense Modal -->
 <div class="modal fade project-modal" id="Serve11" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog" style="max-width: 35%;">
+    <div class="modal-dialog project-modal-dialog" >
         <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">Aerospace and Defense</h5>
@@ -1509,7 +1509,7 @@ Icon for services and Projects -->
 
 <!-- Nuclear Power Modal -->
 <div class="modal fade project-modal" id="Serve12" tabindex="-1" aria-labelledby="transparencyModalLabel" aria-hidden="true">
-    <div class="modal-dialog project-modal-dialog" style="max-width: 35%;">
+    <div class="modal-dialog project-modal-dialog" >
         <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">Nuclear Power</h5>
