--- a/Field-service-management.html
+++ b/Field-service-management.html
@@ -436,7 +436,7 @@ Icon for services and Projects -->
 
       <div class="modal fade  model-popup project-modal" id="Modal1" tabindex="-1"
         aria-labelledby="transparencyModalLabel" aria-hidden="true">
-        <div class="modal-dialog project-modal-dialog" style="max-width: 40%;">
+        <div class="modal-dialog project-modal-dialog"    >
           <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
               <h5 class="modal-title" id="mobileModalLabel">Real-Time GEO Location Tracking </h5>
@@ -460,7 +460,7 @@ Icon for services and Projects -->
 
       <div class="modal fade project-modal" id="Modal2" tabindex="-1"
         aria-labelledby="AdvancedLocationManagementModalLabel" aria-hidden="true">
-        <div class="modal-dialog project-modal-dialog" style="max-width: 40%;">
+        <div class="modal-dialog project-modal-dialog"    >
           <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
               <h5 class="modal-title" id="AdvancedLocationManagementModalLabel">Advanced Multi-Location Management</h5>
@@ -486,7 +486,7 @@ Icon for services and Projects -->
 
       <div class="modal fade project-modal" id="Modal3" tabindex="-1"
         aria-labelledby="SLAsRemindersEscalationsModalLabel" aria-hidden="true">
-        <div class="modal-dialog project-modal-dialog" style="max-width: 40%;">
+        <div class="modal-dialog project-modal-dialog"    >
           <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
               <h5 class="modal-title" id="SLAsRemindersEscalationsModalLabel">Service Level Agreements (SLAs), Reminders
@@ -510,7 +510,7 @@ Icon for services and Projects -->
 
       <div class="modal fade project-modal" id="Modal4" tabindex="-1" aria-labelledby="SparePartsStockAlertsModalLabel"
         aria-hidden="true">
-        <div class="modal-dialog project-modal-dialog" style="max-width: 40%;">
+        <div class="modal-dialog project-modal-dialog"    >
           <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
               <h5 class="modal-title" id="SparePartsStockAlertsModalLabel">Spare Parts Inventory Stock Alerts</h5>
@@ -534,7 +534,7 @@ Icon for services and Projects -->
 
       <div class="modal fade project-modal" id="Modal5" tabindex="-1" aria-labelledby="AutomatedPPMReportsModalLabel"
         aria-hidden="true">
-        <div class="modal-dialog project-modal-dialog" style="max-width: 40%;">
+        <div class="modal-dialog project-modal-dialog"    >
           <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
               <h5 class="modal-title" id="AutomatedPPMReportsModalLabel">Automated PPM and Breakdown Reports</h5>
@@ -557,7 +557,7 @@ Icon for services and Projects -->
 
       <div class="modal fade project-modal" id="Modal6" tabindex="-1" aria-labelledby="PowerfulKPIReportsModalLabel"
         aria-hidden="true">
-        <div class="modal-dialog project-modal-dialog" style="max-width: 40%;">
+        <div class="modal-dialog project-modal-dialog"    >
           <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
               <h5 class="modal-title" id="PowerfulKPIReportsModalLabel">Powerful KPI Reporting</h5>
@@ -763,7 +763,7 @@ Icon for services and Projects -->
 
       <div class="modal fade project-modal" id="Inventory" tabindex="-1" aria-labelledby="transparencyModalLabel"
         aria-hidden="true">
-        <div class="modal-dialog project-modal-dialog" style="max-width: 50%;">
+        <div class="modal-dialog project-modal-dialog"     >
           <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
               <h5 class="modal-title" id="mobileModalLabel">INVENTORY MANAGEMENT</h5>
@@ -792,7 +792,7 @@ Icon for services and Projects -->
 
       <div class="modal fade project-modal" id="FixedAsset" tabindex="-1" aria-labelledby="FixedAssetModalLabel"
         aria-hidden="true">
-        <div class="modal-dialog project-modal-dialog" style="max-width: 50%;">
+        <div class="modal-dialog project-modal-dialog"     >
           <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
               <h5 class="modal-title" id="FixedAssetModalLabel">FIXED ASSET AUDITING</h5>
@@ -821,7 +821,7 @@ Icon for services and Projects -->
 
       <div class="modal fade project-modal" id="AssetLifeCycle" tabindex="-1" aria-labelledby="AssetLifeCycleModalLabel"
         aria-hidden="true">
-        <div class="modal-dialog project-modal-dialog" style="max-width: 50%;">
+        <div class="modal-dialog project-modal-dialog"     >
           <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
               <h5 class="modal-title" id="AssetLifeCycleModalLabel">ASSET LIFE CYCLE MANAGEMENT</h5>
@@ -850,7 +850,7 @@ Icon for services and Projects -->
 
       <div class="modal fade project-modal" id="OEEMonitoring" tabindex="-1" aria-labelledby="OEEMonitoringModalLabel"
         aria-hidden="true">
-        <div class="modal-dialog project-modal-dialog" style="max-width: 50%;">
+        <div class="modal-dialog project-modal-dialog"     >
           <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
               <h5 class="modal-title" id="OEEMonitoringModalLabel">OEE MONITORING</h5>
@@ -879,7 +879,7 @@ Icon for services and Projects -->
 
       <div class="modal fade project-modal" id="AssetTracking" tabindex="-1" aria-labelledby="AssetTrackingModalLabel"
         aria-hidden="true">
-        <div class="modal-dialog project-modal-dialog" style="max-width: 50%;">
+        <div class="modal-dialog project-modal-dialog"     >
           <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
               <h5 class="modal-title" id="AssetTrackingModalLabel">ASSET TRACKING WITH BLE/RFID/QR CODE</h5>
@@ -909,7 +909,7 @@ Icon for services and Projects -->
 
       <div class="modal fade project-modal" id="AssetFloorPlan" tabindex="-1"
         aria-labelledby="InteractiveFloorPlanModalLabel" aria-hidden="true">
-        <div class="modal-dialog project-modal-dialog" style="max-width: 50%;">
+        <div class="modal-dialog project-modal-dialog"     >
           <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
               <h5 class="modal-title" id="InteractiveFloorPlanModalLabel">INTERACTIVE ASSET FLOOR PLAN</h5>
@@ -938,7 +938,7 @@ Icon for services and Projects -->
 
       <div class="modal fade project-modal" id="Procurement" tabindex="-1"
         aria-labelledby="ProcurementManagementModalLabel" aria-hidden="true">
-        <div class="modal-dialog project-modal-dialog" style="max-width: 50%;">
+        <div class="modal-dialog project-modal-dialog"     >
           <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
               <h5 class="modal-title" id="ProcurementManagementModalLabel">PROCUREMENT MANAGEMENT</h5>
@@ -967,7 +967,7 @@ Icon for services and Projects -->
 
       <div class="modal fade project-modal" id="EnergyMonitoring" tabindex="-1"
         aria-labelledby="IoTEnergyMonitoringModalLabel" aria-hidden="true">
-        <div class="modal-dialog project-modal-dialog" style="max-width: 50%;">
+        <div class="modal-dialog project-modal-dialog"     >
           <div class="modal-content project-modal-content">
             <div class="modal-header project-modal-header">
               <h5 class="modal-title" id="IoTEnergyMonitoringModalLabel">IoT ENERGY MONITORING</h5>
