--- a/facility-maintenance-management-software.html
+++ b/facility-maintenance-management-software.html
@@ -1073,7 +1073,7 @@ Icon for services and Projects -->
   
         <div class="modal fade project-modal" id="Inventory" tabindex="-1" aria-labelledby="transparencyModalLabel"
           aria-hidden="true">
-          <div class="modal-dialog project-modal-dialog" style="max-width: 50%;">
+          <div class="modal-dialog project-modal-dialog"  >
             <div class="modal-content project-modal-content">
               <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="mobileModalLabel">INVENTORY MANAGEMENT</h5>
@@ -1102,7 +1102,7 @@ Icon for services and Projects -->
   
         <div class="modal fade project-modal" id="FixedAsset" tabindex="-1" aria-labelledby="FixedAssetModalLabel"
           aria-hidden="true">
-          <div class="modal-dialog project-modal-dialog" style="max-width: 50%;">
+          <div class="modal-dialog project-modal-dialog"  >
             <div class="modal-content project-modal-content">
               <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="FixedAssetModalLabel">FIXED ASSET AUDITING</h5>
@@ -1131,7 +1131,7 @@ Icon for services and Projects -->
   
         <div class="modal fade project-modal" id="AssetLifeCycle" tabindex="-1" aria-labelledby="AssetLifeCycleModalLabel"
           aria-hidden="true">
-          <div class="modal-dialog project-modal-dialog" style="max-width: 50%;">
+          <div class="modal-dialog project-modal-dialog"  >
             <div class="modal-content project-modal-content">
               <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="AssetLifeCycleModalLabel">ASSET LIFE CYCLE MANAGEMENT</h5>
@@ -1160,7 +1160,7 @@ Icon for services and Projects -->
   
         <div class="modal fade project-modal" id="OEEMonitoring" tabindex="-1" aria-labelledby="OEEMonitoringModalLabel"
           aria-hidden="true">
-          <div class="modal-dialog project-modal-dialog" style="max-width: 50%;">
+          <div class="modal-dialog project-modal-dialog"  >
             <div class="modal-content project-modal-content">
               <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="OEEMonitoringModalLabel">OEE MONITORING</h5>
@@ -1189,7 +1189,7 @@ Icon for services and Projects -->
   
         <div class="modal fade project-modal" id="AssetTracking" tabindex="-1" aria-labelledby="AssetTrackingModalLabel"
           aria-hidden="true">
-          <div class="modal-dialog project-modal-dialog" style="max-width: 50%;">
+          <div class="modal-dialog project-modal-dialog"  >
             <div class="modal-content project-modal-content">
               <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="AssetTrackingModalLabel">ASSET TRACKING WITH BLE/RFID/QR CODE</h5>
@@ -1219,7 +1219,7 @@ Icon for services and Projects -->
   
         <div class="modal fade project-modal" id="AssetFloorPlan" tabindex="-1"
           aria-labelledby="InteractiveFloorPlanModalLabel" aria-hidden="true">
-          <div class="modal-dialog project-modal-dialog" style="max-width: 50%;">
+          <div class="modal-dialog project-modal-dialog"  >
             <div class="modal-content project-modal-content">
               <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="InteractiveFloorPlanModalLabel">INTERACTIVE ASSET FLOOR PLAN</h5>
@@ -1248,7 +1248,7 @@ Icon for services and Projects -->
   
         <div class="modal fade project-modal" id="Procurement" tabindex="-1"
           aria-labelledby="ProcurementManagementModalLabel" aria-hidden="true">
-          <div class="modal-dialog project-modal-dialog" style="max-width: 50%;">
+          <div class="modal-dialog project-modal-dialog"  >
             <div class="modal-content project-modal-content">
               <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="ProcurementManagementModalLabel">PROCUREMENT MANAGEMENT</h5>
@@ -1277,7 +1277,7 @@ Icon for services and Projects -->
   
         <div class="modal fade project-modal" id="EnergyMonitoring" tabindex="-1"
           aria-labelledby="IoTEnergyMonitoringModalLabel" aria-hidden="true">
-          <div class="modal-dialog project-modal-dialog" style="max-width: 50%;">
+          <div class="modal-dialog project-modal-dialog"  >
             <div class="modal-content project-modal-content">
               <div class="modal-header project-modal-header">
                 <h5 class="modal-title" id="IoTEnergyMonitoringModalLabel">IoT ENERGY MONITORING</h5>
