logo added,development.css changes

--- a/data-science-services.html
+++ b/data-science-services.html
@@ -404,13 +404,13 @@ Icon for services and Projects -->
     
     <div class="datascience-logo-row">
       <img src="images/development-services/datascience-logo-1.png" alt="Logo 1" class="datascience-fiverow">
-      <img src="images/development-services/datascience-logo-2.jpg" alt="Logo 1" class="datascience-fiverow">
+      <img src="images/development-services/datascience-logo-2.png" alt="Logo 1" class="datascience-fiverow">
       <img src="images/development-services/datascience-logo-3.png" alt="Logo 1" class="datascience-fiverow">
       <img src="images/development-services/datascience-logo-4.png" alt="Logo 1" class="datascience-fiverow">
-      <img src="images/development-services/datascience-logo-5.webp"  alt="Logo 5" class="datascience-fiverow">
+      <img src="images/development-services/datascience-logo-5.png"  alt="Logo 5" class="datascience-fiverow">
       <img src="images/development-services/datascience-logo-6.png"  alt="Logo 6" class="datascience-fiverow">
       <img src="images/development-services/datascience-logo-7.png"  alt="Logo 7" class="datascience-fiverow">
-      <img src="images/development-services/datascience-logo-8.jpg" alt="Logo 8" class="datascience-fiverow">
+      <img src="images/development-services/datascience-logo-8.png" alt="Logo 8" class="datascience-fiverow">
     </div>  
 </div>
 
