IVR Automation Mobile Responsive

--- a/ivr-test-automation.html
+++ b/ivr-test-automation.html
@@ -87,8 +87,8 @@ Icon for services and Projects -->
     <div class="banner-business-container">
         <div class="banner-business-content">
 
-            <h2 class="title gradientText">IVR Automation</h2>
-            <p class="banner-business-description" style="font-size: 1.5rem;">
+            <h2 class="ivrTitle title gradientText">IVR Automation</h2>
+            <p class="ivrDesc banner-business-description" style="font-size: 1.5rem;">
                 Intelligent Automated Testing Solution for your <span class="gradientText">Smart IVR System</span>
             </p>
             <button class="banner-business-demo-button">Book a Demo</button>
