--- a/database-migration.html
+++ b/database-migration.html
@@ -95,6 +95,9 @@ Icon for services and Projects -->
         }
 
         @media screen and (max-width: 700px) {
+            .dbMigration.banner-content {
+                padding-top: 3rem !important;
+            }
             .mb-4.mt-5 {
                 font-size: 2rem !important;
             }
@@ -143,7 +146,7 @@ Icon for services and Projects -->
 
 <section class="banner py-0">
   <div class="banner-img" style="background-image: url('images/services_Images/DatabaseMigration/migration-banner.png'); background-position-y: 40%;">
-    <div class="banner-content">
+    <div class="dbMigration banner-content">
       <div class="container">
         <div class="row justify-content-center text-center">
           <div class="col-xl-10 col-lg-12 col-12">
