--- a/facility-maintenance-management-software.html
+++ b/facility-maintenance-management-software.html
@@ -582,7 +582,7 @@ Icon for services and Projects -->
                 <div class="item">
                   <div class="service-item style-2">
                     <div class="service-image">
-                      <img src="images/services_Images/EIS/WebEx1.jpg" class="img-fluid" alt="Mobile Development">
+                      <img src="images/innomaint/facility-management/4.png" class="img-fluid" alt="Mobile Development">
                     </div>
                     <div class="service-desc">
                       <h4><a href="">Work Order Management</a></h4>
@@ -601,7 +601,7 @@ Icon for services and Projects -->
                 <div class="item">
                   <div class="service-item style-2">
                     <div class="service-image">
-                      <img src="images/services_Images/EIS/Erp1.jpg" class="img-fluid" alt="Social Media Marketing">
+                      <img src="images/innomaint/facility-management/5.png" class="img-fluid" alt="Social Media Marketing">
                     </div>
                     <div class="service-desc">
                       <h4><a href="#">AMC Management</a></h4>
@@ -621,7 +621,7 @@ Icon for services and Projects -->
                 <div class="item">
                   <div class="service-item style-2">
                     <div class="service-image">
-                      <img src="images/services_Images/EIS/p3.jpg" class="img-fluid" alt="Automobile">
+                      <img src="images/innomaint/facility-management/6.png" class="img-fluid" alt="Automobile">
                     </div>
                     <div class="service-desc">
                       <h4><a href="">Asset Management</a></h4>
@@ -640,7 +640,7 @@ Icon for services and Projects -->
                 <div class="item">
                     <div class="service-item style-2">
                       <div class="service-image">
-                        <img src="images/services_Images/EIS/p3.jpg" class="img-fluid" alt="Automobile">
+                        <img src="images/innomaint/facility-management/7.png" class="img-fluid" alt="Automobile">
                       </div>
                       <div class="service-desc">
                         <h4><a href="">Spare Parts Management</a></h4>
@@ -659,7 +659,7 @@ Icon for services and Projects -->
                   <div class="item">
                     <div class="service-item style-2">
                       <div class="service-image">
-                        <img src="images/services_Images/EIS/p3.jpg" class="img-fluid" alt="Automobile">
+                        <img src="images/innomaint/facility-management/8.png" class="img-fluid" alt="Automobile">
                       </div>
                       <div class="service-desc">
                         <h4><a href="">QR Code Scanning</a></h4>
@@ -679,7 +679,7 @@ Icon for services and Projects -->
                   <div class="item">
                     <div class="service-item style-2">
                       <div class="service-image">
-                        <img src="images/services_Images/EIS/p3.jpg" class="img-fluid" alt="Automobile">
+                        <img src="images/innomaint/facility-management/9.png" class="img-fluid" alt="Automobile">
                       </div>
                       <div class="service-desc">
                         <h4><a href="">Geo Location and GPS Tracking</a></h4>
@@ -699,7 +699,7 @@ Icon for services and Projects -->
                   <div class="item">
                     <div class="service-item style-2">
                       <div class="service-image">
-                        <img src="images/services_Images/EIS/p3.jpg" class="img-fluid" alt="Automobile">
+                        <img src="images/innomaint/facility-management/10.png" class="img-fluid" alt="Automobile">
                       </div>
                       <div class="service-desc">
                         <h4><a href="">Dashboard and Reporting</a></h4>
@@ -735,7 +735,7 @@ Icon for services and Projects -->
             </div>
             <div class="modal-body project-modal-body">
               <div class="project-image-container">
-                <img src="images/services_Images/EIS/WebEx1.jpg" alt="Transparency Image" class="img-fluid project-image">
+                <img src="images/innomaint/facility-management/4.png" alt="Transparency Image" class="img-fluid project-image">
               </div>
               <div class="project-content">
                 <p>Work order management involves the process of creating, tracking, and completing maintenance and repair tasks within a facility. Innomaint can help facilities to prioritize work orders based on urgency and allocate resources to the tasks. It also provides real-time updates on the work order overdue/exceeds the scheduled time, the status of work orders, enabling facility managers to track progress and make informed decisions.
@@ -760,7 +760,7 @@ Icon for services and Projects -->
             </div>
             <div class="modal-body project-modal-body">
               <div class="project-image-container">
-                <img src="images/services_Images/EIS/Erp1.jpg" alt="Delivery Image" class="img-fluid project-image">
+                <img src="images/innomaint/facility-management/5.png" alt="Delivery Image" class="img-fluid project-image">
               </div>
               <div class="project-content">
                 <p>AMC management helps track and manage contracts, schedule maintenance tasks, and provide real-time updates on the status of assets. It can also help manage service requests and prioritize tasks based on their criticality and urgency. Facility managers can easily create invoices and keep track of payments by service providers and ensure that all maintenance tasks are completed on time, reducing the likelihood of equipment breakdowns and downtime.
@@ -784,7 +784,7 @@ Icon for services and Projects -->
             </div>
             <div class="modal-body project-modal-body">
               <div class="project-image-container">
-                <img src="images/services_Images/EIS/p3.jpg" alt="Scalability Image" class="img-fluid project-image">
+                <img src="images/innomaint/facility-management/6.png" alt="Scalability Image" class="img-fluid project-image">
               </div>
               <div class="project-content">
                 <p>Asset management refers to the efficient and effective tracking and maintenance of assets such as equipment, machinery, and physical facilities within an organization. Innomaint helps facility managers to monitor the assets’ lifecycle, maintain accurate inventory records, and schedule maintenance and repairs to ensure their proper functioning.
@@ -807,7 +807,7 @@ Icon for services and Projects -->
             </div>
             <div class="modal-body project-modal-body">
               <div class="project-image-container">
-                <img src="images/services_Images/EIS/p3.jpg" alt="Scalability Image" class="img-fluid project-image">
+                <img src="images/innomaint/facility-management/7.png" alt="Scalability Image" class="img-fluid project-image">
               </div>
               <div class="project-content">
                 <p>Innomaint keeps track of the availability of spare parts, purchase orders, stock levels, vendor performance and their location in real-time. It also alerts the maintenance team when stock levels are low and generates purchase orders automatically, ensuring that the spare parts are available when needed.
@@ -830,7 +830,7 @@ Icon for services and Projects -->
             </div>
             <div class="modal-body project-modal-body">
               <div class="project-image-container">
-                <img src="images/services_Images/EIS/p3.jpg" alt="Scalability Image" class="img-fluid project-image">
+                <img src="images/innomaint/facility-management/8.png" alt="Scalability Image" class="img-fluid project-image">
               </div>
               <div class="project-content">
                 <p>With the help of a smartphone or tablet, technicians can scan the QR code attached to equipment, for instance, and immediately retrieve information such as maintenance history, warranty information, and manuals. Customers and Techs can highlight portions of images,add descriptions to convey their messages in a crystal clear way. With Innomaint now anyone can raise a request through one common QR code within facilities.
@@ -854,7 +854,7 @@ Icon for services and Projects -->
             </div>
             <div class="modal-body project-modal-body">
               <div class="project-image-container">
-                <img src="images/services_Images/EIS/p3.jpg" alt="Scalability Image" class="img-fluid project-image">
+                <img src="images/innomaint/facility-management/9.png" alt="Scalability Image" class="img-fluid project-image">
               </div>
               <div class="project-content">
                 <p>Track the route & kilometer taken by a technician via GEOLocation & GPS Tracking for quick arrival upon service request & locate assets in real-time such as equipment, vehicles & supplies. Using Innomaint, field employees can easily punch in and out while starting and finishing work to record their attendance.
@@ -877,7 +877,7 @@ Icon for services and Projects -->
             </div>
             <div class="modal-body project-modal-body">
               <div class="project-image-container">
-                <img src="images/services_Images/EIS/p3.jpg" alt="Scalability Image" class="img-fluid project-image">
+                <img src="images/innomaint/facility-management/10.png" alt="Scalability Image" class="img-fluid project-image">
               </div>
               <div class="project-content">
                 <p>Innomaint dashboard & reports provides users with customizable MMR reports for maintenance activities, work order status, asset utilization, and other KPI metrics. The data gathered can be used to identify trends and make informed decisions to improve the efficiency and cost-effectiveness of the facilities.
