--- a/Ruby-on-Rails.html
+++ b/Ruby-on-Rails.html
@@ -184,7 +184,7 @@ Icon for services and Projects -->
 </section> -->
 
 <section>
-    <div class="container">
+    <div class="container mt-5">
         <div class="row justify-content-center text-center mb-5">
             <div class="col-lg-8 col-md-12">
                 <div class="theme-title">
