Update headings in iot-solutions.html for improved readability with line breaks

--- a/iot-solutions.html
+++ b/iot-solutions.html
@@ -169,7 +169,7 @@
             </div>
             <div class="featured-desc">
               <div class="featured-title">
-                <h5> Safeguard & Track Assets</h5>
+                <h5> Safeguard & Track <br>Assets</h5>
               </div>
               <p>Track assets and their history using BLE/RFID beacons to prevent misplacement and maximize utilization.</p>
             </div>
@@ -196,7 +196,7 @@
             </div>
             <div class="featured-desc">
               <div class="featured-title">
-                <h5>Improves Overall Wellness</h5>
+                <h5>Improves Overall<br> Wellness</h5>
               </div>
               <p>Track conditions and get instant alerts for proactive maintenance and optimal performance.</p>
             </div>
