--- a/header.html
+++ b/header.html
@@ -283,6 +283,11 @@
                             >Android App Development</a
                           >
                         </li>
+                        <li>
+                          <a class="dropdown-item" href="hybrid-mobile-app-development.html"
+                            >Hybrid Mobile App Development</a
+                          >
+                        </li>
                       </ul>
                     </li>
                     <li class="dropdown-submenu">
