--- a/pricing-automation.html
+++ b/pricing-automation.html
@@ -559,7 +559,6 @@ Icon for services and Projects -->
       </div>
     </div>
   </div>
-  
 
 <!-- features ends -->
 
@@ -633,7 +632,7 @@ Icon for services and Projects -->
               <!-- DOM Service Item (Active) -->
               <div class="service-item1 style-1 active">
                 <div class="service-image">
-                  <img src="images/Bautomate/p-b-4.avif" class="img-fluid" alt="">
+                  <img src="images/Bautomate/p-b-4.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="service-desc">
                   <div class="service-title">
